# retouched-server

./: .gitignore  Cargo.toml  README.md  build.rs  icon_config.json
.github/workflows/: build.yml  build_server.yml  release_server.yml
assets/: assets.qrc  onboard.html
cpp/: qt_app.cpp  qt_app.h  tray_manager.cpp  tray_manager.h
packaging/: Info.plist  retouched-server.desktop
packaging/aur/retouched-server-bin/: PKGBUILD
packaging/aur/retouched-server-git/: PKGBUILD
qml/: AboutTab.qml  PatcherTab.qml  ServerTab.qml  SettingsTab.qml  SetupWizard.qml  WebAppTab.qml  main.qml
qml/components/: DeviceCard.qml  LogViewer.qml  StatusIndicator.qml  TitleBar.qml
src/: app_dirs.rs  cert_gen.rs  config.rs  gui_logger.rs  http_server.rs  icon_cache.rs  lib.rs  main.rs  path_util.rs  server.rs  shared_state.rs  touchy_patcher.rs  web_app_server.rs  web_manager.rs  webrtc_bridge.rs
src/gui/: mod.rs  patcher_backend.rs  server_backend.rs  settings_backend.rs  web_app_backend.rs  wizard_backend.rs
src/setup/: firewall.rs  flash_trust.rs  hosts.rs  mod.rs
