[package]
name = "retouched-server"
authors = ["ddavef"]
version = "1.0.1"
edition = "2024"
license = "AGPL-3.0-or-later"
readme = "README.md"
description = "A reverse engineered implementation of the Brass Monkey server in Rust."
repository = "https://github.com/Retouched-Project/retouched-server"

[lib]
name = "retouched_server"
path = "src/lib.rs"

[[bin]]
name = "retouched-server"
path = "src/main.rs"

[features]
default = ["gui"]
gui = ["dep:cxx", "dep:cxx-qt", "dep:cxx-qt-lib", "dep:cxx-qt-build"]

[dependencies]
# bronze-monkey = { git = "https://github.com/Retouched-Project/bronze-monkey", branch = "main" }
bronze-monkey = { path = ".." }

tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
env_logger = "0.11"
uuid = { version = "1", features = ["v4"] }
axum = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "blocking", "json"] }
zip = "2"
directories = "6.0.0"

# GUI (Qt via CXX-Qt)
cxx = { version = "1", optional = true }
cxx-qt = { version = "0.8", optional = true }
cxx-qt-lib = { version = "0.8", features = ["qt_full"], optional = true }

local-ip-address = "0.6"
qrcode = "0.14"
image = { version = "0.25", default-features = false, features = ["png"] }
rcgen = "0.13"
time = "0.3"
dirs = "6"
walkdir = "2"
open = "5"

# WebRTC bridge
webrtc = "0.17.1"
tokio-rustls = "0.26"
rustls = { version = "0.23", features = ["ring"] }
rustls-pemfile = "2"
tower-http = { version = "0.6", features = ["cors", "fs"] }
tower = "0.5"
axum-server = { version = "0.7", features = ["tls-rustls"] }
bytes = "1"

serde_urlencoded = "0.7.1"
flate2 = "1.1.9"
tar = "0.4.45"
url = "2.5.8"
[build-dependencies]
cxx-qt-build = { version = "0.8", optional = true }

[target.'cfg(windows)'.build-dependencies]
winresource = "0.1.31"
